examples/test/testpolicy11950.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11950
  namespace: namespace288
spec:
  podSelector:
    matchLabels:
      key25: value36
      key29: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value10
          key0: value33
      podSelector:
        matchLabels:
          key1: value45
